# mtg-lotr

./: README.md  pyproject.toml
mtg_lotr/: app.py
